--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,9 +10,7 @@
 .popup {
   position: relative;
   width: 100%;
-  height: 100vh;
   display: inline-block;
-  cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -27,21 +25,37 @@
   display: inline-block;
   width: 50%;
   height: 50vh;
-  background-color: #555;
-  color: #fff;
+  background-color: transparent;
+  color: #000000;
   text-align: center;
   border-radius: 6px;
   padding: 8px 0;
   position: fixed;
   transform: translate(-50%, -50%);
   z-index: 1;
+  outline: none;
+  box-sizing: border-box;
 }
 
 .popup-text .title {
   display: block;
+  min-height: 40px;
+  background-color: lightgrey;
+  padding-top: 12px;
+  padding-bottom: 8px;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 6px 6px 0  0 ;
 }
 .popup-text .text {
   display: block;
+  background-color: #fff;
+  height: 100%;
+  padding: 20px 10px 10px 10px;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 0 0 6px 6px;
+  border:  1px solid #000000;
 }
 
 .show {
